# project-planning

./: README.md  pyproject.toml
src/project_planning/: crew.py  main.py  models.py
src/project_planning/config/: tasks.yaml
